fix: toc overlap

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -211,7 +211,7 @@ h6:focus .header-anchor {
   top: 90px;
   bottom: 0;
   font-size: 0.8em;
-  right: 20px;
+  right: 2px;
   z-index: 200;
   overflow: hidden;
   --uno: hidden sm-flex flex-col w-100px lg-w-200px xl-w-300px;
